WOOSTIFY-170 #comment update variation css

--- a/assets/css/sass/grid/grid.scss
+++ b/assets/css/sass/grid/grid.scss
@@ -1,5 +1,7 @@
 //ios
 $screen-ios                                    : 375px !default;
+//Tablet
+$screen-tablet                                 : 720px !default;
 
 //Small screen / tablet
 $screen-sm                                     : 768px !default;
