--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -303,7 +303,7 @@
 		display: block;
 		clear: both;
 		height: 40px;
-		min-width: 170px;
+		min-width: 75%;
 		background-color: #fff;
 	}
 	label {
@@ -314,9 +314,11 @@
 		vertical-align: middle;
 	}
 	.value{
-		max-width: 50%;
-		select {
-			width: 50%;
+		max-width: 70%;
+
+		@media ( min-width: $screen-tablet ) {
+			display: flex;
+			align-items: center;
 		}
 	}
 	.tawcvs-swatches,
@@ -340,17 +342,39 @@
 	}
 
 	.reset_variations {
+		white-space: nowrap;
+		border: 1px solid #e8e8e8;
+		background-color: #fff;
+		border-radius: 5px;
+		padding: 2px 10px;
+		margin-top: 10px;
+		float: left;
+
+		@media ( min-width: $screen-tablet ) {
+			margin-left: 10px;
+			margin-top: 0;
+			float: none;
+		}
+
+		&:before {
+			content: "\e619";
+			font-family: $icon;
+			margin-right: 7px;
+			font-size: 12px;
+		}
+
 		&[style*="visibility: hidden;"] {
 			display: none !important;
 		}
 	}
 
-	@media ( max-width: 720px ) {
+	@media ( max-width: $screen-tablet - 1 ) {
 		.label {
 			width: 100%;
 		}
 		.value {
 			max-width: 100%;
+			flex-direction: column;
 		}
 		select {
 			min-width: 100%;
@@ -519,7 +543,7 @@
 			list-style: none;
 			display: inline-block;
 			margin: 0 30px;
-			@media ( max-width: 720px ) {
+			@media ( max-width: $screen-tablet - 1 ) {
 				margin: 5px 0;
 				width: 100%;
 				a {
