--- a/style.css
+++ b/style.css
@@ -7980,6 +7980,7 @@ footer#colophon {
   padding: 2px 10px;
   margin-top: 10px;
   float: left;
+  /* For first time load */
 }
 
 @media (min-width: 720px) {
@@ -7997,7 +7998,7 @@ footer#colophon {
   font-size: 12px;
 }
 
-.variations .reset_variations[style*="visibility: hidden;"] {
+.variations .reset_variations:not([style*="visibility"]) {
   display: none !important;
 }
 
@@ -8016,6 +8017,10 @@ footer#colophon {
 
 .single_variation {
   margin-bottom: 40px;
+}
+
+.single_variation:empty {
+  display: none;
 }
 
 .shop_table .variation {
