--- a/style.css
+++ b/style.css
@@ -7945,6 +7945,10 @@ footer#colophon {
   max-width: 70%;
 }
 
+.variations .value:before {
+  content: none !important;
+}
+
 @media (min-width: 720px) {
   .variations .value {
     display: flex;
@@ -7980,6 +7984,7 @@ footer#colophon {
   padding: 2px 10px;
   margin-top: 10px;
   float: left;
+  transition-duration: 0s;
   /* For first time load */
 }
 
@@ -9940,6 +9945,14 @@ footer#colophon {
 
 .elementor-add-to-cart.elementor-product-variable .variations .value:before {
   content: none !important;
+}
+
+.elementor-add-to-cart .quantity {
+  border: 1px solid #e8e8e8 !important;
+}
+
+.elementor-widget-wc-add-to-cart .quantity {
+  border: 1px solid #e8e8e8;
 }
 
 /*# sourceMappingURL=style.css.map */
