--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -385,6 +385,11 @@
 }
 
 @media ( max-width: $screen-sm - 1 ) {
+	.site-header {
+		.shopping-bag-button {
+			margin-right: 15px;
+		}
+	}
 	.has-custom-mobile-logo{
 		a{
 			&:not(.custom-mobile-logo-url){
