WOOSTIFY-185 #comment issue with sidebar on product categỏy page

--- a/assets/css/sass/base/layout/blog/blog-list.scss
+++ b/assets/css/sass/base/layout/blog/blog-list.scss
@@ -34,7 +34,7 @@
     .post-cover-image{
         margin-bottom: 35px;
 		a{
-			display: block;
+			display: inline-block;
 		}
         img{
             object-fit: cover
