--- a/assets/css/sass/modules/themify-icons.scss
+++ b/assets/css/sass/modules/themify-icons.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: $icon;
-    src:url('assets/fonts/themify.eot?-fvbane');
-    src:url('assets/fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
-        url('assets/fonts/themify.woff?-fvbane') format('woff'),
-        url('assets/fonts/themify.ttf?-fvbane') format('truetype'),
-        url('assets/fonts/themify.svg?-fvbane#themify') format('svg');
+    src:url('assets/fonts/themify.eot');
+    src:url('assets/fonts/themify.eot') format('embedded-opentype'),
+        url('assets/fonts/themify.woff') format('woff'),
+        url('assets/fonts/themify.ttf') format('truetype'),
+        url('assets/fonts/themify.svg') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: auto
