WOOSTIFY-199 #comment add arrow for first-child primary menu #done

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -97,6 +97,15 @@
             > li{
                 display: inline-flex;
                 line-height: 1;
+                align-items: center;
+
+                &.menu-item-has-children{
+                    &:after{
+                        content: "\e64b";
+                        font-family: $icon;
+                        font-size: 10px $i;
+                    }
+                }
 
                 > a{
                     padding: 20px;
