--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -108,7 +108,7 @@
         font-size: 20px;
         position: absolute;
         right: 0;
-        top: 0;
+        bottom: 0;
         width: 50px;
         height: 50px;
         @extend .flex;
@@ -118,9 +118,8 @@
     .search-field{
         border-color: $tr;
         height: 100%;
-        background: #eeeeec;
         width: 100%;
-        padding: 0 20px;
+        background-color: #eeeeec;
         padding-left: 20px;
         padding-right: 50px;
         border-radius: 50px;
@@ -143,7 +142,7 @@
         height: 100%;
         position: absolute;
         right: 0;
-        top: 0;
+        bottom: 0;
         z-index: 2;
         border: 0;
     }
